aboutus fixed and text-align is remains center

--- a/src/components/Home/AboutUs/AboutUs.css
+++ b/src/components/Home/AboutUs/AboutUs.css
@@ -1,17 +1,3 @@
-<<<<<<< HEAD
-*{margin:0;box-sizing: border-box;}
-.home_aboutus{
-  width:auto;
-  height:100vh;
-  background:#F0FFFF;
-  text-align:center;
-  margin-left:25px;
-  margin-right:25px;
-  
-}
-h1.heading{
-  font-weight: 600;
-=======
 * {
   margin: 0;
   padding: 0;
@@ -34,18 +20,7 @@ h1.heading{
 
 .events {
   display: flex;
->>>>>>> 170054472962fe15d33b1ac538275ad1b9bbf0a7
-}
-div p{
-  font-size: 15px;
-}
-button{
-  background:#F0FFFF;
-  border-radius: 5px;
-  cursor: pointer;
-  color:black;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+
 }
 
  
